package org.example;

/**
 * Interfaz que define el comportamiento de una mascota.
 * Las clases que implementen esta interfaz deben proporcionar
 * la funcionalidad de jugar.
 */
public interface Mascota {
    /**
     * Método que debe implementarse para simular la acción de jugar.
     * Representa la interacción lúdica de una mascota.
     */
    void jugar();
}
