package org.example;

/**
 * Interfaz que define el comportamiento de un animal volador.
 * Las clases que implementen esta interfaz deben proporcionar
 * la capacidad de volar.
 */
public interface Volador {
    /**
     * Método que debe implementarse para simular la acción de volar.
     * Representa la capacidad de un animal de desplazarse por el aire.
     */
    void volar();
}
