@startuml Diagrama de Clases - Zoológico

' Configuración de estilo
skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor LightBlue
    BorderColor Black
    ArrowColor Black
}

' Clase abstracta Animal
abstract class Animal {
    + String nombre
    + int edad
    + Animal(String nombre, int edad)
    + {abstract} String emitirSonido()
    + void imprimirInformacion()
}

' Clase AnimalDomestico
class AnimalDomestico {
    + AnimalDomestico(String nombre, int edad)
    + String emitirSonido()
    + void jugar()
}

' Clase AnimalSalvaje
class AnimalSalvaje {
    + AnimalSalvaje(String nombre, int edad)
    + void cazar()
    + String emitirSonido()
}

' Clase Perro
class Perro {
    + String raza
    + Perro(String nombre, int edad, String razaPerro)
    + String emitirSonido()
}

' Clase Leon
class Leon {
    + Leon(String nombre, int edad)
    + String emitirSonido()
}

' Clase Pajaro
class Pajaro {
    + Pajaro(String nombre, int edad)
    + void volar()
    + String emitirSonido()
}

' Interfaz Mascota
interface Mascota {
    + void jugar()
}

' Interfaz Volador
interface Volador {
    + void volar()
}

' Clase Zoologico
class Zoologico {
    - Animal[] animales
    - int contador
    + Zoologico(int capacidad)
    + void agregarAnimal(Animal a)
    + void hacerSonarATodos()
}

' Clase Main
class Main {
    + {static} void main(String[] args)
}

' Relaciones de Herencia
Animal <|-- AnimalDomestico : extends
Animal <|-- AnimalSalvaje : extends
AnimalDomestico <|-- Perro : extends
AnimalSalvaje <|-- Leon : extends
Animal <|-- Pajaro : extends

' Relaciones de Implementación
Mascota <|.. AnimalDomestico : implements
Volador <|.. Pajaro : implements

' Relaciones de Composición/Agregación
Zoologico "1" *-- "0..*" Animal : contiene

' Relaciones de Dependencia
Main ..> Zoologico : usa
Main ..> Perro : usa
Main ..> Pajaro : usa
Main ..> Leon : usa

' Notas explicativas
note right of Animal
  Clase abstracta base
  para todos los animales
end note

note right of Zoologico
  Gestiona una colección
  de animales
end note

@enduml
